# mlb-ng

./: .clang-format  .gitmodules  CMakeLists.txt
app/desktop/: AndroidMenu.qml  ApplicationsList.qml  ArticleTile.qml  InitialPage.qml  ListDelegate.qml  MainStackView.qml  MainView.qml  PPage.qml  PageWithMenu.qml  ScrollBar.qml  android-menu.qmlproject  main.qml
app/desktop/Articles/: Article.qml  ArticleDelegate.qml  ArticleImages.qml  Articles.qml  ArticlesPage.qml
app/desktop/Players/: Player.qml  Players.qml
app/desktop/Schedule/: GameDelegate.qml  LeagueSchedule.qml  Schedule.qml  SplitDelegate.qml
app/desktop/dummydata/: appStyle.qml  articlesModel.qml  dataManager.qml  playersModel.qml  scheduleModel.qml
app/ubuntu/: ubuntu.qml  ubuntu.qmlproject
libmlb/: CMakeLists.txt
libmlb/rsc/: links.json  mlb.qrc
libmlb/src/: article.cpp  article.h  downloader.cpp  downloader.h  downloader_p.h  engine.cpp  engine.h  engine_p.h  links.cpp  links.h  parser.cpp  parser.h
libmlb/tests/: CMakeLists.txt  downloader_test.cpp  downloadertest.h  enginetest.h
test/testdata/: arts.html  players.html  teams.html
